--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,8 @@ jobs:
   MacOS:
     runs-on: macos-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4.1.1
       - name: Install dependencies
         run: brew install openssl frei0r sdl2 wget
       - name: Compile
